# Baza

./: .gitattributes  .gitignore  CMakeLists.txt  FirstPart  SecondPart  main  task1
Object-oriented-programming/HW/: Program.cs
Object-oriented-programming/Lab 1.1/C#/: Program.cs  StringManipulator.cs
Object-oriented-programming/Lab 1.1/C++/: String.h  program
Object-oriented-programming/Lab 1.2/C#/: Program.cs  String.cs  StringManipulator.cs
Object-oriented-programming/Lab 1.2/C++/: Program.cpp
Object-oriented-programming/Lab 1.3/C#/: Program.cs  String.cs  StringManipulator.cs
Object-oriented-programming/Lab 1.3/C++/: Program.cpp  String.cpp
Object-oriented-programming/Lab 2.1/C#/: C#.sln  Program.cs  StringManipulator.cs
Object-oriented-programming/Lab 2.1/C++/: StringBase.cpp  main  main.cpp
Object-oriented-programming/Lab 2.2/C#/: Program.cs  StringManipulator.cs
Object-oriented-programming/Lab 2.2/C++/: StringBase.h
RGR/: RGR.cpp  RGR1.cpp
labs/1.4/: main.cpp
labs/1.5/: FirstPart.cpp  SecondPart.cpp  main.cpp
labs/1.6/: part1.cpp  part2.cpp
labs/1.7/: task1.cpp  task2.cpp  task3.cpp  task4.cpp  task5.cpp
labs/1.8/: task1.cpp  task2.cpp
labs/2.1/: task1.cpp  task2.cpp  task3.cpp
labs/2.2/: task1.cpp
labs/2.3/: part1.cpp  part2.cpp  task1.cpp
labs/2.4/: task1.cpp
labs/2.5/: list.h  task.cpp
practicals/1.4/: main.cpp
practicals/1.5/: main.cpp
practicals/1.6/: task1.cpp  task2.cpp  task3.cpp  task4.cpp  task5.cpp  task6.cpp
practicals/1.7/: task1.cpp
practicals/2.1/: task.cpp
practicals/2.2/: task.cpp
(+5 files in other folders)
