cmake_minimum_required(VERSION 3.29.6)
project(Baza)

set(CMAKE_CXX_STANDARD 14)

add_executable(Baza
    labs/1.4/main.cpp
        labs/1.5/FirstPart.cpp
        practicals/1.4/main.cpp
    practicals/1.5/main.cpp
        labs/1.5/FirstPart.cpp
        labs/1.5/SecondPart.cpp
        practicals/1.6/task1.cpp
        practicals/1.7/task1.cpp
        practicals/1.6/task2.cpp
        practicals/1.6/task3.cpp
        practicals/1.6/task4.cpp
        practicals/1.6/task5.cpp
        practicals/1.6/task6.cpp
        labs/1.6/part1.cpp
        labs/1.6/part2.cpp
        labs/1.7/task1.cpp
        labs/1.7/task2.cpp
        labs/1.7/task3.cpp
        labs/1.7/task4.cpp
        labs/1.7/task5.cpp
        labs/1.8/task1.cpp
        labs/1.8/task2.cpp
        labs/2.1/task1.cpp
        labs/2.1/task2.cpp
        labs/2.1/task3.cpp
        labs/2.2/task1.cpp
        labs/2.3/part1.cpp
        labs/2.3/part2.cpp
        labs/2.4/task1.cpp
        labs/2.5/list.h
        labs/2.5/task.cpp)
